Media Queries Fixed on iPhone6/7/8

--- a/src/index.css
+++ b/src/index.css
@@ -121,6 +121,15 @@ header h1 {
 	h1 {
 		font-size: 2.5rem;
 	}
+	h2 {
+		font-size: 2rem;
+	}
+	p > span {
+		font-size: 2rem;
+	}
+	.filtros label {
+		font-size: 2rem !important;
+	}
 }
 
 .formulario input[type='text'],
